<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cristinalopez.formulario.MainActivityF">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNombreUsuario"
        android:hint="@string/nombre_contacto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_nacimiento"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edtNombreUsuario"
        android:id="@+id/textView" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtTelefono"
        android:layout_below="@+id/datePicker"
        android:hint="@string/telefono"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtMail"
        android:layout_below="@+id/edtTelefono"
        android:hint="@string/correo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtDescripcion"
        android:layout_below="@+id/edtMail"
        android:hint="@string/descripcion"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        android:onClick="irSiguiente"
        android:id="@+id/buttonEdit"
        android:layout_below="@+id/edtDescripcion" />


</RelativeLayout>
